[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cp-snippets"
version = "0.1.1"
description = "Small competitive programming concepts and utilities"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Lakshmi Srinivas" }
]
license = { text = "MIT" }
